// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|createAlphaProject complex mutations create a project with a CollectStep that contains requirements and SelectionStep that contains statuses 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le premier requirement de l'étape de dépôt",
                },
              },
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le deuxième requirement de l'étape de dépôt",
                },
              },
            ],
            "totalCount": 2,
          },
          "statuses": Array [],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Le beau body de l'étape SelectionStep",
          "defaultSort": "random",
          "enabled": true,
          "id": Any<String>,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [
            Object {
              "color": "INFO",
              "id": Any<String>,
              "name": "Le premier statut de l'étape de sélection",
            },
            Object {
              "color": "INFO",
              "id": Any<String>,
              "name": "Le deuxième statut de l'étape de sélection",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape SelectionStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject complex mutations create a project with a simple PresentationStep, CollectStep that contains requirements and statuses and SelectionStep that contains statuses 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "PresentationStep",
          "body": "Le beau body de l'étape PresentationStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape PresentationStep",
        },
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le premier requirement de l'étape de dépôt",
                },
              },
              Object {
                "node": Object {
                  "__typename": "CheckboxRequirement",
                  "id": Any<String>,
                  "label": "Le deuxième requirement de l'étape de dépôt",
                },
              },
            ],
            "totalCount": 2,
          },
          "statuses": Array [
            Object {
              "color": "INFO",
              "id": Any<String>,
              "name": "Le premier statut de l'étape de dépôt",
            },
            Object {
              "color": "DANGER",
              "id": Any<String>,
              "name": "Le deuxième statut de l'étape de dépôt",
            },
            Object {
              "color": "WARNING",
              "id": Any<String>,
              "name": "Le troisième statut de l'étape de dépôt",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
        Object {
          "__typename": "SelectionStep",
          "body": "Le beau body de l'étape SelectionStep",
          "defaultSort": "random",
          "enabled": true,
          "id": Any<String>,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [
            Object {
              "color": "INFO",
              "id": Any<String>,
              "name": "Le premier statut de l'étape de sélection",
            },
            Object {
              "color": "INFO",
              "id": Any<String>,
              "name": "Le deuxième statut de l'étape de sélection",
            },
          ],
          "timeless": false,
          "title": "Le beau titre de l'étape SelectionStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only a "CollectStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "CollectStep",
          "body": "Le beau body de l'étape CollectStep",
          "defaultSort": "random",
          "enabled": true,
          "form": Object {
            "title": "Formulaire attaché à aucun projet",
          },
          "id": Any<String>,
          "private": false,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [],
          "timeless": false,
          "title": "Le beau titre de l'étape CollectStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de dépôt",
      "type": Object {
        "id": "4",
        "title": "project.types.participatoryBudgeting",
      },
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only a "ConsultationStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "ConsultationStep",
          "body": "Le beau body de l'étape ConsultationStep",
          "consultations": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape ConsultationStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de consultation",
      "type": Object {
        "id": "2",
        "title": "global.consultation",
      },
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only a "QuestionnaireStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "QuestionnaireStep",
          "body": "Le beau body de l'étape QuestionnaireStep",
          "enabled": true,
          "id": Any<String>,
          "questionnaire": Object {
            "id": "UXVlc3Rpb25uYWlyZTpxdWVzdGlvbm5haXJlMQ==",
            "title": "Votre avis sur les JO 2024 à Paris",
          },
          "timeless": false,
          "title": "Le beau titre de l'étape QuestionnaireStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de questionnaire",
      "type": Object {
        "id": "7",
        "title": "global.questionnaire",
      },
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only a "RankingStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "RankingStep",
          "body": "Le beau body de l'étape RankingStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape RankingStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de classement",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only a "SelectionStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "SelectionStep",
          "body": "Le beau body de l'étape SelectionStep",
          "defaultSort": "random",
          "enabled": true,
          "id": Any<String>,
          "requirements": Object {
            "edges": Array [],
            "totalCount": 0,
          },
          "statuses": Array [],
          "timeless": false,
          "title": "Le beau titre de l'étape SelectionStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de sélection",
      "type": Object {
        "id": "4",
        "title": "project.types.participatoryBudgeting",
      },
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only an "OtherStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "OtherStep",
          "body": "Le beau body de l'étape OtherStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape OtherStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de type autre",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only an "PresentationStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "PresentationStep",
          "body": "Le beau body de l'étape PresentationStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape PresentationStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de présentation",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project with only an "RankingStep" step 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [
        Object {
          "__typename": "RankingStep",
          "body": "Le beau body de l'étape RankingStep",
          "enabled": true,
          "id": Any<String>,
          "timeless": false,
          "title": "Le beau titre de l'étape RankingStep",
        },
      ],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple avec une étape de classement",
      "type": Object {
        "id": "4",
        "title": "project.types.participatoryBudgeting",
      },
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project without any steps 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`Internal|createAlphaProject simple mutations create a project without any steps and with 3 districts 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyMQ==",
          "username": "lbrunet",
        },
        Object {
          "id": "VXNlcjp1c2VyQWRtaW4=",
          "username": "admin",
        },
      ],
      "cover": Object {
        "id": "media1",
        "name": "Titre du média 1",
      },
      "districts": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": "projectDistrict2",
            },
          },
          Object {
            "node": Object {
              "id": "projectDistrict3",
            },
          },
          Object {
            "node": Object {
              "id": "projectDistrict4",
            },
          },
        ],
      },
      "id": Any<String>,
      "isExternal": false,
      "opinionCanBeFollowed": true,
      "opinionTerm": 2,
      "publishedAt": "2019-03-01 12:00:00",
      "restrictedViewers": Object {
        "edges": Array [],
      },
      "steps": Array [],
      "themes": Array [
        Object {
          "id": "theme3",
          "title": "Transport",
        },
      ],
      "title": "Je suis un projet simple",
      "type": null,
      "video": "https://www.youtube.com/watch?v=pjJ2w1FX_Wg",
      "visibility": "PUBLIC",
    },
  },
}
`;

exports[`create a project with group of users as visibility 1`] = `
Object {
  "createAlphaProject": Object {
    "project": Object {
      "id": Any<String>,
      "restrictedViewers": Object {
        "edges": Array [
          Object {
            "node": Object {
              "id": Any<String>,
            },
          },
          Object {
            "node": Object {
              "id": Any<String>,
            },
          },
          Object {
            "node": Object {
              "id": Any<String>,
            },
          },
        ],
      },
    },
  },
}
`;
